# PatrickPromtiorTest

./: .env  README.md  pyproject.toml  railway.json
app/: rag_chain.py  server.py
doc/: Documentation.docx  ~$cumentation.docx  ~WRL2078.tmp
importer/: load_and_process.py
