[tool.poetry]
name = "PatrickPromtior"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10.5,<3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
unstructured = {version = "^0.12.2", extras = ["all-docs"]}
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-huggingface = "^0.0.3"
faiss-cpu = "^1.8.0.post1"
langchain-core = "^0.2.33"
fastapi = "^0.112.1"
langchain-text-splitters = "^0.2.2"
langchain-cli = ">=0.0.15"
sentence-transformers = "^2.2.2"
torch = "^2.4.0"



[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
